--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
+[![.NET](https://github.com/CreativePudding/GamePriceComparator.BE.dotnet8/actions/workflows/dotnet.yml/badge.svg)](https://github.com/CreativePudding/GamePriceComparator.BE.dotnet8/actions/workflows/dotnet.yml)
 cd
