--- a/Readme
+++ b/Readme
@@ -1,3 +1,5 @@
 [![.NET](https://github.com/CreativePudding/GamePriceComparator.BE.dotnet8/actions/workflows/dotnet.yml/badge.svg)](https://github.com/CreativePudding/GamePriceComparator.BE.dotnet8/actions/workflows/dotnet.yml)
 
+[![.NET](https://github.com/CreativePudding/GamePriceComparator.BE.dotnet8/actions/workflows/dotnet.yml/badge.svg)](https://github.com/CreativePudding/GamePriceComparator.BE.dotnet8/actions/workflows/dotnet.yml)
+
 cd
